@startuml

title __KURSOVOY's Class Diagram__\n

  namespace org.example.DB {
    class org.example.DB.Weather {
    }
  }
  

  namespace org.example.DB {
    interface org.example.DB.WeatherDAO {
    }
  }
  

  namespace org.example.DB {
    class org.example.DB.WeatherDAOPost {
    }
  }
  

  namespace org.example.model {
    class org.example.model.WeatherBot {
    }
  }
  

  org.example.DB.WeatherDAOPost .up.|> org.example.DB.WeatherDAO
  org.example.model.WeatherBot -up-|> org.telegram.telegrambots.bots.TelegramLongPollingBot
  org.example.model.WeatherBot o-- org.example.DB.WeatherDAOPost : weatherDAOImpl


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
